--- a/social.html
+++ b/social.html
@@ -179,7 +179,7 @@
         //if you want the URL to open in the same window use '_parent'  instead of '_blank'
 
         if (id === "email") {
-          window.open("mailto:someone@yoursite.com", '_blank').focus(); //Add your email after "mailto:""
+          window.open("https://mail.google.com/mail/u/0/#inbox", '_blank').focus(); //Add your email after "mailto:""
         }
 
         else if (id === "facebook") {
