--- a/social.html
+++ b/social.html
@@ -85,6 +85,10 @@
       background-color: #2AABEE;
     }
 
+    .whatsapp:hover {
+      background-color: #2AABEE;
+    }
+
     .social {
       position: relative;
       margin: 10px;
@@ -168,6 +172,12 @@
       </div>
       <!-- End telegram Icon -->
 
+      <!-- Start whatsapp Icon -->
+      <div id="whatsapp" onclick="navigate(this.id)" class="social whatsapp">
+        <span class="icon whatsapp"><i class="fab fa-whatsapp"></i></span>
+      </div>
+      <!-- End whatsapp Icon -->
+      
     </div>
 
 
@@ -179,14 +189,14 @@
         //if you want the URL to open in the same window use '_parent'  instead of '_blank'
 
         if (id === "email") {
-          window.open("https://mail.google.com/mail/u/0/#inbox", '_blank').focus(); //Add your email after "mailto:""
+          window.open("https://mail.google.com", '_blank').focus(); //Add your email after "mailto:""
         }
 
         else if (id === "facebook") {
           window.open("https://facebook.com/", '_blank').focus(); //Add the url to your facebook page or account
         }
         else if (id === "instagram") {
-          window.open("instagram.com", '_blank').focus(); //Add the url to your instagram account
+          window.open("https://www.instagram.com", '_blank').focus(); //Add the url to your instagram account
         }
         else if (id === "linkedin") {
           window.open("https://www.linkedin.com/", '_blank').focus(); //Add the url to your pinterest account
@@ -208,6 +218,9 @@
         }
         else if (id === "telegram") {
           window.open("https://web.telegram.org/", '_blank').focus(); //Add the url to your telegram account
+        }
+        else if (id === "whatsapp") {
+          window.open("https://web.whatsapp.com", '_blank').focus(); //Add the url to your telegram account
         }
       }
 
