--- a/social.html
+++ b/social.html
@@ -86,11 +86,11 @@
     }
 
     .whatsapp:hover {
-      background-color: #2AABEE;
+      background-color: #25D366;
     }
 
     .github:hover{
-      background-color: #2AABEE;
+      background-color: #000000;
     }
 
     .social {
