--- a/social.html
+++ b/social.html
@@ -32,7 +32,7 @@
     }
 
     .social {
-      background-color: #eae9e9;
+      background-color: #e4cce6;
       width: 55px;
       height: 55px;
       border-radius: 50%;
